feat: add unifi poller

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -23,6 +23,9 @@ stringData:
     SECRET_QB_PASSWORD: ENC[AES256_GCM,data:fqWEWUJlLj92CHVQ7SXnKDZSj0QveL5hgzFUwZvDiszNSK6g,iv:RfqwZAGs55EkasYCvLKrhmH7QEOeLamD6WVkaM+hZfQ=,tag:SDV+Mspn0O2+5DUXK7U2JA==,type:str]
     SECRET_QB_USERNAME: ENC[AES256_GCM,data:d9/r9w==,iv:gRfUOnscy7eZyonomkE24aGKRic0TRZkgUF4hBDxuos=,tag:QeurTRBt7g0pL25iEZJ/NQ==,type:str]
     SECRET_TRAEFIK_PILOT_TOKEN: ENC[AES256_GCM,data:NF90df4klaP4LtDYpjUKElWMW8/Um1/gGhJJo5rT+DtrOl2g,iv:QXr6ldwgIY19+PKlGBA+mBfbnDkcH1AFH//aPs6Qcuc=,tag:iZ1ZoVb7dpGugTtPvOnBHw==,type:str]
+    SECRET_UNIFI_URL: ENC[AES256_GCM,data:+3QsqGNnmf7av/V3DMCIjeJOqtI=,iv:jqyVwMtodCYwrmckkEJnVx6/PT1Ly4tKumDVKCJBbAE=,tag:YMQkIQSrse4ZDDE1rgPygw==,type:str]
+    SECRET_UNIFI_USERNAME: ENC[AES256_GCM,data:rEt66S28huhC4P6xuuR0HQ==,iv:B1O1iN4UlKRqfv5o0idzgU6dGZox31KDX2GJBPSZHCI=,tag:uLDGGtZrqO8Ky3sR3n1bEA==,type:str]
+    SECRET_UNIFI_PASSWORD: ENC[AES256_GCM,data:N+cVt2ztyeUATuzgt8Hvs39jrTPF1oM2LeGP7C9e1NPyT/gb,iv:Pr1InBvcPZ4hT3QO8KIhYYHbVVCfpir1KW8R7nZOnm4=,tag:qtAfVrpS0fDGiio/9zyPkA==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -32,8 +35,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-23T11:35:24Z"
-    mac: ENC[AES256_GCM,data:agVIooZKsMPbuSAmddtitdrrifB4h8OtHycHBN6uaqaQAJSy9a46AorC67XvVZYIQRm4Qxky3iJHxCsDXGlLPWY8QLGdfTp5eQXq0zAtAAacmf7ZeOsY/D1AUqzG9+ln9gm6RLOTQwkpkEx0ed21CBHOiqwxCR3vtvv8y8SalFs=,iv:wNGch6RlQDOJq98QXT2TGhakp53/hA+5X2WfRuH3QZw=,tag:j656fuUN4ND23N2fjYDh2g==,type:str]
+    lastmodified: "2021-09-23T12:27:16Z"
+    mac: ENC[AES256_GCM,data:a1ZWQv8mlGzF7PrCvgxi/WYBhhlGFaCM+WN7wodnesCSt91CNxznw4W+biTua+r3MJyAsq9nntQO8VTRfLJlqpThCQT+VJqzWnMiTXZCvvxehUuTaKYf//pjCT7rzdsNq2KZUhquZz0J7/R3JkS6FA791XB9OQGQaCstwjfpfX4=,iv:inVHanQDeiePtzuwsbBSnyM8F51qcBRClPOTqsrA0tQ=,tag:fxbfz+vHu/QTnGDJKkXIHA==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
