--- a/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cloudflare-ddns
   namespace: networking
 spec:
-  schedule: "*/5 * * * *"
+  schedule: "0 * * * *"
   concurrencyPolicy: "Forbid"
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 5
