--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -13,5 +13,5 @@ resources:
   # - snmp-exporter-ups-0
   - speedtest-exporter
   - thanos
-  # - unifi-poller
+  - unifi-poller
   # - uptimerobot-heartbeat
