--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -7,11 +7,7 @@ resources:
   - kube-prometheus-stack
   - loki
   - promtail
-  # - pushgateway
-  # - snmp-exporter-pdu-0
-  # - snmp-exporter-pdu-1
-  # - snmp-exporter-ups-0
+  - pushgateway
   - speedtest-exporter
   - thanos
   - unifi-poller
-  # - uptimerobot-heartbeat
