--- a/cluster/apps/monitoring/speedtest-exporter/helm-release.yaml
+++ b/cluster/apps/monitoring/speedtest-exporter/helm-release.yaml
@@ -23,7 +23,8 @@ spec:
     metrics:
       enabled: true
       serviceMonitor:
-        interval: 60m
+        # interval: 60m
+        interval: 5m
         scrapeTimeout: 1m
       prometheusRule:
         enabled: false
