--- a/cluster/apps/monitoring/unifi-poller/helm-release.yaml
+++ b/cluster/apps/monitoring/unifi-poller/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       UP_UNIFI_DEFAULT_PASS: "${SECRET_UNIFI_PASSWORD}"
       UP_UNIFI_DEFAULT_SAVE_SITES: true
       UP_UNIFI_DEFAULT_SAVE_DPI: false
-      UP_UNIFI_DEFAULT_SITE_0: "all"
+      UP_UNIFI_CONTROLLER_0_SITE_0: "all"
       UP_INFLUXDB_DISABLE: true
       UP_PROMETHEUS_DISABLE: false
       UP_PROMETHEUS_NAMESPACE: "unifipoller"
