--- a/cluster/apps/monitoring/unifi-poller/helm-release.yaml
+++ b/cluster/apps/monitoring/unifi-poller/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       tag: 2.1.3
     env:
       TZ: "America/New_York"
-      UP_UNIFI_DEFAULT_ROLE: "homelab-controller"
+      UP_UNIFI_DEFAULT_ROLE: "unifi-poller"
       UP_UNIFI_DEFAULT_URL: "https://${SECRET_UNIFI_URL}:8443"
       UP_UNIFI_DEFAULT_VERIFY_SSL: false
       UP_UNIFI_DEFAULT_USER: "${SECRET_UNIFI_USERNAME}"
