--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # - intel-gpu-plugin
   - kured
   - metrics-server
-  # - nfs-subdir-external-provisioner
+  - nfs-subdir-external-provisioner
   # - node-feature-discovery
   - node-problem-detector
   - reloader
