--- a/cluster/apps/kube-system/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/apps/kube-system/nfs-subdir-external-provisioner/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
   values:
     replicaCount: 2
     nfs:
-      server: "${SECRET_NAS_ADDR}"
+      server: ${SECRET_NAS_ADDR}
       path: "/nas/k8s/PersistentVolumeClaims"
       mountOptions:
         - noatime
