--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -55,102 +55,102 @@ spec:
           kvstore:
             store: inmemory
         enable_api: true
-    # alerting_groups:
-    #
-    # SMART Failures
-    #
-    # - name: smart-failure
-    #   rules:
-    #     - alert: SmartFailures
-    #       expr: |
-    #         sum by (hostname) (count_over_time({hostname=~".+"} |~ "(?i).*smartd.*(error|fail).*"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "SMART has reported failures a drive on {{$hostname}}"
-    #
-    # zigbee2mqtt
-    #
-    # - name: zigbee2mqtt
-    #   rules:
-    #     - alert: ZigbeeUnableToReachMQTT
-    #       expr: |
-    #         sum(count_over_time({app="zigbee2mqtt"} |~ "(?i)not connected to mqtt server"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "Zigbee2mqtt is unable to reach MQTT"
-    #
-    # zwavejs2mqtt
-    #
-    # - name: zwavejs2mqtt
-    #   rules:
-    #     - alert: ZwaveUnableToReachMQTT
-    #       expr: |
-    #         sum(count_over_time({app="zwavejs2mqtt"} |~ "(?i)error while connecting mqtt"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "Zwavejs2mqtt is unable to reach MQTT"
-    #
-    # frigate
-    #
-    # - name: frigate
-    #   rules:
-    #     - alert: FrigateUnableToReachMQTT
-    #       expr: |
-    #         sum(count_over_time({app="frigate"} |~ "(?i)unable to connect to mqtt server"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "Frigate is unable to reach MQTT"
-    #
-    # *arr applications
-    #
-    # - name: arr
-    #   rules:
-    #     - alert: ArrDatabaseIsLocked
-    #       expr: |
-    #         sum by (app) (count_over_time({app=~".*arr"} |~ "(?i)database is locked"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "{{$app}} is experiencing locked database issues"
-    #
-    # home-assistant
-    #
-    # - name: home-assistant
-    #   rules:
-    #     - alert: HomeAssistantUnableToReachPostgresql
-    #       expr: |
-    #         sum by (app) (count_over_time({app=~"home-assistant"} |~ "(?i)error in database connectivity during commit"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "Home Assistant is unable to connect to postgresql"
-    #
-    # vaultwarden
-    #
-    # - name: vaultwarden
-    #   rules:
-    #     - alert: VaultwardenUnableToReachPostgresql
-    #       expr: |
-    #         sum by (app) (count_over_time({app=~"vaultwarden"} |~ "(?i)could not connect to server"[2m])) > 0
-    #       for: 10s
-    #       labels:
-    #         severity: critical
-    #         category: logs
-    #       annotations:
-    #         summary: "Vaultwarden is unable to connect to postgresql"
+    alerting_groups:
+      #
+      # SMART Failures
+      #
+      # - name: smart-failure
+      #   rules:
+      #     - alert: SmartFailures
+      #       expr: |
+      #         sum by (hostname) (count_over_time({hostname=~".+"} |~ "(?i).*smartd.*(error|fail).*"[2m])) > 0
+      #       for: 10s
+      #       labels:
+      #         severity: critical
+      #         category: logs
+      #       annotations:
+      #         summary: "SMART has reported failures a drive on {{$hostname}}"
+      #
+      # zigbee2mqtt
+      #
+      # - name: zigbee2mqtt
+      #   rules:
+      #     - alert: ZigbeeUnableToReachMQTT
+      #       expr: |
+      #         sum(count_over_time({app="zigbee2mqtt"} |~ "(?i)not connected to mqtt server"[2m])) > 0
+      #       for: 10s
+      #       labels:
+      #         severity: critical
+      #         category: logs
+      #       annotations:
+      #         summary: "Zigbee2mqtt is unable to reach MQTT"
+      #
+      # zwavejs2mqtt
+      #
+      # - name: zwavejs2mqtt
+      #   rules:
+      #     - alert: ZwaveUnableToReachMQTT
+      #       expr: |
+      #         sum(count_over_time({app="zwavejs2mqtt"} |~ "(?i)error while connecting mqtt"[2m])) > 0
+      #       for: 10s
+      #       labels:
+      #         severity: critical
+      #         category: logs
+      #       annotations:
+      #         summary: "Zwavejs2mqtt is unable to reach MQTT"
+      #
+      # frigate
+      #
+      # - name: frigate
+      #   rules:
+      #     - alert: FrigateUnableToReachMQTT
+      #       expr: |
+      #         sum(count_over_time({app="frigate"} |~ "(?i)unable to connect to mqtt server"[2m])) > 0
+      #       for: 10s
+      #       labels:
+      #         severity: critical
+      #         category: logs
+      #       annotations:
+      #         summary: "Frigate is unable to reach MQTT"
+      #
+      # *arr applications
+      #
+      - name: arr
+        rules:
+          - alert: ArrDatabaseIsLocked
+            expr: |
+              sum by (app) (count_over_time({app=~".*arr"} |~ "(?i)database is locked"[2m])) > 0
+            for: 10s
+            labels:
+              severity: critical
+              category: logs
+            annotations:
+              summary: "{{$app}} is experiencing locked database issues"
+      #
+      # home-assistant
+      #
+      - name: home-assistant
+        rules:
+          - alert: HomeAssistantUnableToReachPostgresql
+            expr: |
+              sum by (app) (count_over_time({app=~"home-assistant"} |~ "(?i)error in database connectivity during commit"[2m])) > 0
+            for: 10s
+            labels:
+              severity: critical
+              category: logs
+            annotations:
+              summary: "Home Assistant is unable to connect to postgresql"
+      #
+      # vaultwarden
+      #
+      # - name: vaultwarden
+      #   rules:
+      #     - alert: VaultwardenUnableToReachPostgresql
+      #       expr: |
+      #         sum by (app) (count_over_time({app=~"vaultwarden"} |~ "(?i)could not connect to server"[2m])) > 0
+      #       for: 10s
+      #       labels:
+      #         severity: critical
+      #         category: logs
+      #       annotations:
+      #         summary: "Vaultwarden is unable to connect to postgresql"
