debug troubleshooting loki and vpn-gateway

--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -33,4 +33,4 @@ data:
   VPN_PORT: "51820"
   VPN_GATEWAY_VPN_PORT: "51820"
   # VPN_FORWARDED_PORT_1: "56059"
-  VPN_COUNTRY: CH
+  VPN_COUNTRY: "CH"
