feat: add home-assistant

--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   # - esphome
   # - frigate
   - hajimari
-  # - home-assistant
+  - home-assistant
   # - mosquitto
   # - node-red
   # - vaultwarden
