--- a/cluster/core/rook-ceph/storage/volume-snapshot-class.yaml
+++ b/cluster/core/rook-ceph/storage/volume-snapshot-class.yaml
@@ -5,13 +5,13 @@ metadata:
   name: csi-rbdplugin-snapclass
   annotations:
     k10.kasten.io/is-snapshot-class: "true"
+    velero.io/csi-volumesnapshot-class: "true"
 driver: rook-ceph.rbd.csi.ceph.com
 parameters:
   clusterID: rook-ceph
   csi.storage.k8s.io/snapshotter-secret-name: rook-csi-rbd-provisioner
   csi.storage.k8s.io/snapshotter-secret-namespace: rook-ceph
 deletionPolicy: Delete
-
 ---
 apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
@@ -19,6 +19,7 @@ metadata:
   name: csi-cephfsplugin-snapclass
   annotations:
     k10.kasten.io/is-snapshot-class: "true"
+    velero.io/csi-volumesnapshot-class: "true"
 driver: rook-ceph.cephfs.csi.ceph.com
 parameters:
   clusterID: rook-ceph
