--- a/cluster/apps/home/syncthing/config-pvc.yaml
+++ b/cluster/apps/home/syncthing/config-pvc.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  # resources:
-  #   requests:
-  #     storage: 100Gi
+  resources:
+    requests:
+      storage: 1Mi
   storageClassName: rook-ceph-block
