fix: syncthing tuning

--- a/cluster/apps/home/syncthing/helm-release.yaml
+++ b/cluster/apps/home/syncthing/helm-release.yaml
@@ -25,8 +25,17 @@ spec:
     persistence:
       config:
         enabled: true
+        type: custom
+        mountPath: /var/syncthing/config/config.xml
+        subPath: config.xml
+        volumeSpec:
+          configMap:
+            name: syncthing-config
+        readOnly: true
+      data:
+        enabled: true
         existingClaim: syncthing-v1
-        mountPath: /var/syncthing/config
+        mountPath: /var/syncthing/Sync
     podAnnotations:
       backup.velero.io/backup-volumes: config
       pre.hook.backup.velero.io/container: fsfreeze
@@ -34,14 +43,6 @@ spec:
       post.hook.backup.velero.io/container: fsfreeze
       post.hook.backup.velero.io/command: '["/sbin/fsfreeze", "--unfreeze", "/config"]'
       configmap.reloader.stakater.com/reload: "syncthing-config"
-      # config-file:
-      #   enabled: true
-      #   type: custom
-      #   mountPath: /var/syncthing/config/config.xml
-      #   subPath: config.xml
-      #   volumeSpec:
-      #     configMap:
-      #       name: syncthing-config-file
     ingress:
       main:
         enabled: true
