debug: velero backups with incorrect signature

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,6 +8,7 @@ stringData:
     SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:p8V0eQRPwSxAcVSHBXU9O3kb7kZmdSK5UFuOqgU6Eyk5EpcW2ebYT6zDZE5h3md8vS1iXV4/fFNhdC6JXSgym8JLuYhFamm+6bMhRu9dtdqQ7B/Uzrl7V7rtwdhsZhzRfTYCQ+CPR8cR15RsKP2y0f87Lb7B57VD,iv:jwn+NDLJ+M7W/TLELHs2/oIvQKLeUlIS9LlEQIY4Prk=,tag:XRJLjxSpEJaiJZPI4IrTPg==,type:str]
     SECRET_B2_BUCKET: ENC[AES256_GCM,data:ov8Snp3OuD0e/w==,iv:e2Ff7LMOlz5AUv5SoGnTjYVEv5GUhkMPH1Byd8JuXeo=,tag:iOSs5SJE8ZBbiGLm4EXrlQ==,type:str]
     SECRET_B2_S3_URL: ENC[AES256_GCM,data:bkkG1PVyor4BCDG1h4somdSCrPXLzOskRhOPYRLF,iv:Lb+TxEfnbmXjwkX3+/GvY/NJqYo561nFPkM/QkFqpX0=,tag:kQUitPz6T1euK5IKVdgwVA==,type:str]
+    SECRET_B2_S3_PUBLIC_URL: ENC[AES256_GCM,data:cDiz7VF6aZOW96cVMWJlLGHRtVUOfQiQr71MxakAcdMB3A==,iv:bk5WnLG2RiSZtq2PKcbhKV8NkEU2w/TJLtPhCKSk9HQ=,tag:t6TJSIYHqf3vVCzdB6YKNA==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:ov5Boartv8urVY+r2A==,iv:+LhuthZ9489dsXTzT5V0/Zxk22FdBzY+Bsnx4dAI9wM=,tag:V6ntCx9z7kSEqSILnx4CXg==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:aGYCoJWfEtNu5nS00BhKoFQ2/3bszatoVw==,iv:RZj2Zm3wuLFWUSDx7QAWLFVQczLCwP64PEH6doTPZcM=,tag:vZpLecqAnHUc4fSOLEqt/g==,type:str]
     SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:hs0evsa1FfylBZ6i7OtNGDJzm5W7WDrN4nBAd2OqiE84v5W2,iv:fGkTar+e/ajHh6BP0hkrGh5kKETQwG03uxwNy9AVwJk=,tag:Es0xLhX0w8JoFgdBI+a+5Q==,type:str]
@@ -35,8 +36,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-23T12:27:16Z"
-    mac: ENC[AES256_GCM,data:a1ZWQv8mlGzF7PrCvgxi/WYBhhlGFaCM+WN7wodnesCSt91CNxznw4W+biTua+r3MJyAsq9nntQO8VTRfLJlqpThCQT+VJqzWnMiTXZCvvxehUuTaKYf//pjCT7rzdsNq2KZUhquZz0J7/R3JkS6FA791XB9OQGQaCstwjfpfX4=,iv:inVHanQDeiePtzuwsbBSnyM8F51qcBRClPOTqsrA0tQ=,tag:fxbfz+vHu/QTnGDJKkXIHA==,type:str]
+    lastmodified: "2021-09-28T01:23:01Z"
+    mac: ENC[AES256_GCM,data:TBdOPVuQThqSeY9PVBX3ROOouImJmZ7+OBqE/G9Lj709AzRZnpC0FTMil1Ifi7Ag2JbhgrpcC2AfNJysw/AU/8Pcy2OWGgPo2n7UklICFvq1H6o2eApLTpSfg5vCQjA6EUl4LBFHaJE57d48aAmR60LBiypnehh+8s4wKw2n/tU=,iv:DfCK7hneru/t/yznQ1ZfB4Pd3Gzb2JmIcIsUmirIf1Y=,tag:y+hePIGHm3jGaU81kUMYeg==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
