--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,7 +8,7 @@ stringData:
     SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:p8V0eQRPwSxAcVSHBXU9O3kb7kZmdSK5UFuOqgU6Eyk5EpcW2ebYT6zDZE5h3md8vS1iXV4/fFNhdC6JXSgym8JLuYhFamm+6bMhRu9dtdqQ7B/Uzrl7V7rtwdhsZhzRfTYCQ+CPR8cR15RsKP2y0f87Lb7B57VD,iv:jwn+NDLJ+M7W/TLELHs2/oIvQKLeUlIS9LlEQIY4Prk=,tag:XRJLjxSpEJaiJZPI4IrTPg==,type:str]
     SECRET_B2_BUCKET: ENC[AES256_GCM,data:ov8Snp3OuD0e/w==,iv:e2Ff7LMOlz5AUv5SoGnTjYVEv5GUhkMPH1Byd8JuXeo=,tag:iOSs5SJE8ZBbiGLm4EXrlQ==,type:str]
     SECRET_B2_S3_URL: ENC[AES256_GCM,data:bkkG1PVyor4BCDG1h4somdSCrPXLzOskRhOPYRLF,iv:Lb+TxEfnbmXjwkX3+/GvY/NJqYo561nFPkM/QkFqpX0=,tag:kQUitPz6T1euK5IKVdgwVA==,type:str]
-    #ENC[AES256_GCM,data:kYyMePVkzHcs58TbJ2bBQc6lg7tDb4PlbegEXTqFsSo3LPa/hPmmQ7DSAMBZIYdt+hPBVVYu,iv:dpWXCjFzs9wFIHkd38TDFShHrbDl+Ol6BdVfW6SZPLc=,tag:Nl91jl10bUULtitaF1uV7Q==,type:comment]
+    SECRET_B2_S3_PUBLIC_URL: ENC[AES256_GCM,data:6jrOa7jS9RGxV2ZkY2EhWvlVtA0=,iv:Dt9D716YpAy75MzN3EUjJVf7lwhYUvKnTVxjMS3Urz0=,tag:0x/otYU7AsU+x85PVSot3g==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:ov5Boartv8urVY+r2A==,iv:+LhuthZ9489dsXTzT5V0/Zxk22FdBzY+Bsnx4dAI9wM=,tag:V6ntCx9z7kSEqSILnx4CXg==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:aGYCoJWfEtNu5nS00BhKoFQ2/3bszatoVw==,iv:RZj2Zm3wuLFWUSDx7QAWLFVQczLCwP64PEH6doTPZcM=,tag:vZpLecqAnHUc4fSOLEqt/g==,type:str]
     SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:hs0evsa1FfylBZ6i7OtNGDJzm5W7WDrN4nBAd2OqiE84v5W2,iv:fGkTar+e/ajHh6BP0hkrGh5kKETQwG03uxwNy9AVwJk=,tag:Es0xLhX0w8JoFgdBI+a+5Q==,type:str]
@@ -36,8 +36,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-28T23:58:30Z"
-    mac: ENC[AES256_GCM,data:SmHl3QssF55zB/82rOvHfW8rhycFfCR+p24FkDNSekrw2RXcendrzajTAnEoC04t+PVuuF74OzzSxA43S+udkzJPMCgeRINVO9cp9ZbwmdidjRFnp+gjvonBveExXe+/jiTxvI02mwAWZiOuSHhYjhF4vVV/pcSEO4AE5hV0cjc=,iv:StOimHG3hAP8eZCm3j1/Jz2ioWJIs85stcNdXk/KMs8=,tag:oEldcTrr6hv6XJleRUQ6qg==,type:str]
+    lastmodified: "2021-09-29T00:14:32Z"
+    mac: ENC[AES256_GCM,data:lueH/zB3nV+t94aXOygHdAxgjn2lM/bBOFRRWq84XZyMKdJ+LqGJX9q1sk87owfY7CoA/GQNbdbRgosMBIlaLKw8w7tvfE6M4ctiZgz8S6wUJ1+bBsWrvoRXqBzcsEg7tnTBaF8KVCHDtY34jc/x2ch+Ku5NAnbZ19VSb3+E0KE=,iv:IZ45Fa4+RfNHDk4Al93oooSl4bSnn0+/jVfBMMIuBic=,tag:aSbOxBjRO9IZ87LlWhMJJw==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
