--- a/cluster/core/rook-ceph/storage/secret.sops.yaml
+++ b/cluster/core/rook-ceph/storage/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: rook-ceph-mon-endpoints
     namespace: rook-ceph
 data:
-    data: ENC[AES256_GCM,data:+GsAirAxWJicqX4fHCgoOPLKBsOOtACQUSEHKq+BtMVeenyamaX0ocPYmAqL4YmQygRqhw0ctOqmbBQzhut7BB+sY9TtOtEcujgX+OLsnM0o7q4=,iv:M6XMByBCzHul9Nyo1F6JrZBqtacSQOYBYOzPYC8I1wk=,tag:HuPG454PRuHrhw1HEEj+xw==,type:str]
+    config.json: ENC[AES256_GCM,data:CtId2x7lSzF1mtvh96EduBOCuLt/NJh+sGVtqshXjfhuRXGAGZ8S1Tsyskgx4vopz9k9ziAaGYKWPCBHMylUZpCB96E5szaQVRmIqSO9ELiN+tf/95QdV7vfiNwRrJtwzAlJpIp/dJnU5bruJv3jOz1BNNXV6kgKUeFGgaLwSAC11L22wm4cQ6k9Ade+72qCsdgHmvK+7qUFSLmYysiTwGlw0qzd4CluPjVRybpa2/OePhFksZnHamqt6ySc8zXCrYc06TCZsIDBJUA=,iv:2a7qdVMB101zpzkd4WMetWA5HBibMNS9PJFF8PA71ho=,tag:2kVX06ukCDWKL8GbWLMGJg==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -14,8 +14,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-10-09T15:41:02Z"
-    mac: ENC[AES256_GCM,data:9/stNkYTu4DUjjW532WSTyGQ+QhaUM/3XlK5p5xrd4XAFhOGFj+LKuZuiffKlEz8ZVjkB1VqjCPV8vp9VotluVr58OK1XZnTKDRuV/57y5Va3Vo1V19yV9WfRLAL0/kehecCgMJ7J1f2N0CAGTBYrE1PK0DGLmhI9F4YYWVIHko=,iv:QftRaCNGnu/pmDuxGsqar07/c7iZ4lNxb5Ov3gbz7qc=,tag:bKJ6kIrtZjCyHiKp/ysWSw==,type:str]
+    lastmodified: "2021-10-09T15:58:19Z"
+    mac: ENC[AES256_GCM,data:lgARCoirCLeh5Ad7iFCUD1cy0PBUX3FLSBY/bpsiKw2PnJHfQkdCCy17uMwrePBWetTcJAdK/Vmwn8sZfoqU0dKBNrAsN9prQKxgBUlqDwt/P/yqi/QFoSVdjN6O+YQApyxNXWhZvk89Y5R+BLqRmeco9DGrDHFj3a7L3TnoOcE=,iv:A7N7v5lu5LkVPpwvMagu19IAU6qLMIswWbGindoFD1k=,tag:hbd9pl2DrAEQYrYImQkMVg==,type:str]
     pgp:
         - created_at: "2021-09-17T16:42:15Z"
           enc: |
