debug: gitrepository api error

--- a/cluster/crds/kube-prometheus-stack/crds.yaml
+++ b/cluster/crds/kube-prometheus-stack/crds.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
   name: kube-prometheus-stack-source
@@ -23,7 +23,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: kube-prometheus-stack-source
