--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -27,6 +27,7 @@ stringData:
     SECRET_UNIFI_URL: ENC[AES256_GCM,data:+3QsqGNnmf7av/V3DMCIjeJOqtI=,iv:jqyVwMtodCYwrmckkEJnVx6/PT1Ly4tKumDVKCJBbAE=,tag:YMQkIQSrse4ZDDE1rgPygw==,type:str]
     SECRET_UNIFI_USERNAME: ENC[AES256_GCM,data:rEt66S28huhC4P6xuuR0HQ==,iv:B1O1iN4UlKRqfv5o0idzgU6dGZox31KDX2GJBPSZHCI=,tag:uLDGGtZrqO8Ky3sR3n1bEA==,type:str]
     SECRET_UNIFI_PASSWORD: ENC[AES256_GCM,data:N+cVt2ztyeUATuzgt8Hvs39jrTPF1oM2LeGP7C9e1NPyT/gb,iv:Pr1InBvcPZ4hT3QO8KIhYYHbVVCfpir1KW8R7nZOnm4=,tag:qtAfVrpS0fDGiio/9zyPkA==,type:str]
+    SAMPLE: ENC[AES256_GCM,data:qL7p7Q==,iv:EsVBBzj+9Gjoo3igZyh/gOh180H4CCGVH1aJrolPDc4=,tag:p+Qcdg0+UYeAUH8rCXl4iQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -36,8 +37,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-29T00:54:47Z"
-    mac: ENC[AES256_GCM,data:YkHEDCIyJRKrNtq6hNDQn7NRILPrAMNEwIpTZR4NEzebJx292yD/FNj3pqr1uauYQZxX+IlucEEx+BJCSwX3Gxoeg8MThGwtq5rkK9R6Hgc4Di7dAqygPZZY2RSdiHWjOz+W4OjXLW7FIMBzA2apNF7a1yIZaomiKDSmYnPcM58=,iv:H9G6jxjqVZAnJOHTvACuxsIMVoiuecHOG8Yu6Jpqe/Y=,tag:/L1aecsQZZRZ/0wN0GIjHw==,type:str]
+    lastmodified: "2021-10-09T20:34:55Z"
+    mac: ENC[AES256_GCM,data:qindnSTS5UrKER9KoBa4zvs2Z1In75UnH9Xy1gqmm3jIjqEjs7WUN19opG9hKKLUcaqwX9NBzqnItSnP+vPLAEJBMgxY0fHey3xesfi2zazWiHkGm8VfQFmLS+msCpXhatM0YAbAyjPHcVD3Smega5ZY1wFR7N47i+oGcZ+M3uY=,iv:NpdAjTmeQllwFNp2jEtHfUVTpMbK6I66oFRSPxouhD8=,tag:G/FU0v+lqpn2rkY6WK5CaQ==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
