--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Editors
-.vscode/
 # Trash
 .DS_Store
 Thumbs.db
@@ -14,12 +12,14 @@ bin
 .task/
 # Ansible
 xanmanning.k3s*
+# Terraform
+.terraform
+.terraform.tfstate*
+terraform.tfstate*
 # Sops
 .decrypted~*
+*.agekey
 # Kubernetes
 kubeconfig
-# NAS
-server/secrets.json
 # Other
 report.html
-ansible.log
