--- a/.github/workflows/helm-release-differ.yaml
+++ b/.github/workflows/helm-release-differ.yaml
@@ -1,5 +1,5 @@
 ---
-name: Diff Helm Releases on Pull Requests
+name: Helm Release Differ
 
 on: # yamllint disable-line rule:truthy
   pull_request:
@@ -13,8 +13,8 @@ env:
   conf_ignore_known_labels_containing_versions: true
 
 jobs:
-  changes:
-    name: Detect changes
+  detect-file-changes:
+    name: Detect File Changes
     runs-on: ubuntu-20.04
     outputs:
       files: "${{ steps.extract.outputs.files }}"
@@ -32,15 +32,16 @@ jobs:
           filtered=$(grep -zl "kind: HelmRelease.*registryUrl=" ${{ steps.filter.outputs.changed_files }} \
             | jq -nR '[inputs | select(length>0)]')
           echo ::set-output name=files::${filtered}
-  helm-release-diff:
-    name: Template Helm Releases
+
+  helm-release-differ:
+    name: Helm Release Differ
     runs-on: ubuntu-20.04
-    if: ${{ needs.changes.outputs.files != '' }}
+    if: ${{ needs.detect-file-changes.outputs.files != '' }}
     needs:
-      - changes
+      - detect-file-changes
     strategy:
       matrix:
-        file: ${{ fromJson(needs.changes.outputs.files) }}
+        file: ${{ fromJson(needs.detect-file-changes.outputs.files) }}
       fail-fast: false
     steps:
       - uses: yokawasa/action-setup-kube-tools@v0.8.0
@@ -108,6 +109,7 @@ jobs:
             message="$message"'```diff'$'\n'"$diff"$'\n''```'
           fi
           echo "::set-output name=message::$(echo "$message" | jq --raw-input --slurp)"
+
       - uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
