--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -1,5 +1,5 @@
 ---
-name: Publish docs via GitHub Pages
+name: Publish Docs
 
 on: # yamllint disable-line rule:truthy
   workflow_dispatch:
@@ -7,12 +7,13 @@ on: # yamllint disable-line rule:truthy
     branches:
       - main
     paths:
-      - ".github/workflows/publish-docs.yaml"
+      - ".github/workflows/docs.yaml"
       - "mkdocs.yaml"
       - "docs/**"
 
 jobs:
   publish-docs:
+    name: Publish Docs
     runs-on: ubuntu-20.04
     if: github.event.pull_request.head.repo.fork == false
     steps:
@@ -32,6 +33,5 @@ jobs:
             mkdocs-macros-plugin >=0.5 \
             mkdocs-material >=1.0 \
             mkdocs-minify-plugin>=0.3 \
-            mkdocs-redirects>=1.0 \
-            mkdocs-git-revision-date-localized-plugin
+            mkdocs-redirects>=1.0
       - run: mkdocs gh-deploy --config-file ./mkdocs.yaml --force
