--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
 #shellcheck disable=SC2148,SC2155
-export KUBECONFIG=$(expand_path ./kubeconfig)
+export KUBECONFIG=$(expand_path ./cluster/kubeconfig)
 export ANSIBLE_CONFIG=$(expand_path ./ansible/ansible.cfg)
