feat: its 2022 baby

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,7 @@ terraform.tfstate*
 *.agekey
 # Kubernetes
 kubeconfig*
-talosconfig
-# NAS
-secrets.json
-# Other
-report.html
+talosconfig*
+
+# Folder Structure v3
+/storage
