--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,103 +7,93 @@
     ":semanticCommits",
     ":separatePatchReleases",
     "docker:enableMajor",
+    ":enablePreCommit",
     "github>claughinghouse/home-ops//.github/renovate/autoMerge",
     "github>claughinghouse/home-ops//.github/renovate/labels",
     "github>claughinghouse/home-ops//.github/renovate/semanticCommits"
   ],
-  "timezone": "America/New_York",
+  "platform": "github",
+  "username": "rosey-bot[bot]",
+  "repositories": ["claughinghouse/home-ops"],
+  "onboarding": false,
+  "requireConfig": false,
+  "gitAuthor": "rosey-bot <98030736+rosey-bot[bot]@users.noreply.github.com>",
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": [
     "prIgnoreNotification"
   ],
   "rebaseWhen": "conflicted",
+  "commitBodyTable": true,
+  // set up ignored deps
+  "ignoreDeps": [
+    "ghcr.io/fluxcd/helm-controller",
+    "ghcr.io/fluxcd/image-automation-controller",
+    "ghcr.io/fluxcd/image-reflector-controller",
+    "ghcr.io/fluxcd/kustomize-controller",
+    "ghcr.io/fluxcd/notification-controller",
+    "ghcr.io/fluxcd/source-controller"
+  ],
   // set up renovate managers
   "docker-compose": {
     "fileMatch": [
-      "(^|\/)docker-compose.*\.ya?ml$",
-      "(^|\/)docker-compose.*\.ya?ml\.j2$"
+      "ansible/.+/docker-compose.*\\.ya?ml(\\.j2)?$"
+    ]
+  },
+  "flux": {
+    "fileMatch": [
+      "cluster/.+\\.ya?ml$"
     ]
   },
   "helm-values": {
     "fileMatch": [
-      "cluster/.+/helm-release\\.yaml$"
+      "cluster/.+\\.ya?ml$"
     ]
   },
   "helmv3": {
     "fileMatch": [
-      "charts/.+/Chart\\.yaml$"
+      "charts/.+/Chart\\.ya?ml$"
     ]
   },
   "kubernetes": {
     "fileMatch": [
-      "cluster/.+\\.yaml$"
-    ],
-    "ignorePaths": [
-      "cluster/base/"
+      "cluster/.+\\.ya?ml$"
     ]
   },
   "regexManagers": [
-    // regexManager to read and process HelmRelease files
+    // Read and process GitHub Releases
     {
       "fileMatch": [
-        "cluster/.+\\.yaml$"
+        "cluster/.+\\.ya?ml$",
+        "ansible/.+\\.ya?ml$",
+        "hack/.+\\.sh$"
       ],
       "matchStrings": [
-        // helm releases
-        "registryUrl=(?<registryUrl>.*?)\n *chart: (?<depName>.*?)\n *version: (?<currentValue>.*)\n"
+        "datasource=(?<datasource>.*?)\n *url: https:\/\/github\\.com\/(?<depName>.*?)\\.git\n *ref:\n *tag: (?<currentValue>.*)\n",
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)\n.*?_version: \"(?<currentValue>.*)\"\n",
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)\n.*?_VERSION=\"(?<currentValue>.*)\"\n"
       ],
-      "datasourceTemplate": "helm"
+      "datasourceTemplate": "github-releases"
     },
-    // regexManager to read and process cert-manager CRD's
+    // Read and process Custom Resource Definitions
     {
       "fileMatch": [
-        "cluster/crds/cert-manager/.+\\.yaml$"
+        "cluster/.+\\.ya?ml$"
       ],
       "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?)\n *tag: (?<depName>[a-zA-Z-]+)-(?<currentValue>.*)\n",
         "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n.*\\/(?<currentValue>.*?)\\/"
       ],
       "datasourceTemplate": "helm"
     },
-    // regexManager to read and process kube-prometheus-stack and velero CRD's
+    // Read and process Custom Resources
     {
       "fileMatch": [
-        "cluster/crds/kube-prometheus-stack/.+\\.yaml$"
+        "cluster/.+\\.ya?ml$"
       ],
       "matchStrings": [
-        "registryUrl=(?<registryUrl>.*?)\n *tag: (?<depName>[a-zA-Z-]+)-(?<currentValue>.*)\n"
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)\n .*: (?<currentValue>.*=?)"
       ],
-      "datasourceTemplate": "helm"
-    },
-    // regexManager to read and process Traefik CRD's
-    {
-      "fileMatch": [
-        "cluster/crds/traefik/.+\\.yaml$"
-      ],
-      "matchStrings": [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: v(?<currentValue>.*)\n"
-      ],
-      "datasourceTemplate": "helm"
-    },
-    // regexManager to read and process Rook-Ceph CRD's
-    {
-      "fileMatch": [
-        "cluster/crds/rook-ceph/.+\\.yaml$"
-      ],
-      "matchStrings": [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: (?<currentValue>.*)\n"
-      ],
-      "datasourceTemplate": "helm"
-    },
-    // regexManager to read and process External Snapshotter and External DNS CRD's
-    {
-      "fileMatch": [
-        "cluster/crds/external-snapshotter/.+\\.yaml$",
-        "cluster/crds/external-dns/.+\\.yaml$"
-      ],
-      "matchStrings": [
-        "datasource=(?<datasource>.*?)\n *url: https:\/\/github\\.com\/(?<depName>.*?)\\.git\n *ref:\n *tag: (?<currentValue>.*)\n"
-      ],
-      "datasourceTemplate": "github-releases"
+      "datasourceTemplate": "docker"
     }
   ],
   "packageRules": [
@@ -120,14 +110,14 @@
       ],
       "commitMessageExtra": "to {{newVersion}}"
     },
-    // custom versioning
+    // packages with custom versioning
     {
       "matchDatasources": [
         "docker"
       ],
       "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$",
       "matchPackageNames": [
-        "blakeblackshear/frigate"
+        "docker.io/blakeblackshear/frigate"
       ]
     },
     {
@@ -139,51 +129,67 @@
         "quay.io/minio/minio"
       ]
     },
+    // packages with loose versioning
     {
       "matchDatasources": [
-        "docker"
+        "docker",
+        "github-releases"
       ],
       "versioning": "loose",
       "matchPackageNames": [
         "ghcr.io/k8s-at-home/plex",
-        "ghcr.io/k8s-at-home/qbittorrent"
+        "ghcr.io/k8s-at-home/qbittorrent",
+        "Hypfer/Valetudo"
       ]
     },
     // group packages
     {
+      "groupName": "rook-ceph-suite",
       "matchDatasources": [
-        "helm",
-        "docker"
+        "docker",
+        "helm"
       ],
       "matchPackagePatterns": [
         "^rook.ceph"
       ],
-      "groupName": "rook-ceph-suite",
       "additionalBranchPrefix": "",
       "separateMinorPatch": true
     },
     {
+      "groupName": "external-snapshotter-suite",
       "matchDatasources": [
-        "github-releases",
-        "docker"
+        "docker",
+        "github-releases"
       ],
       "matchPackagePatterns": [
         "external-snapshotter",
         "snapshot-controller"
       ],
-      "groupName": "external-snapshotter-suite",
       "additionalBranchPrefix": "",
       "separateMinorPatch": true
     },
     {
+      "groupName": "system-upgrade-controller-suite",
       "matchDatasources": [
-        "github-tags",
-        "docker"
+        "docker",
+        "github-tags"
       ],
       "matchPackagePatterns": [
         "rancher/system-upgrade-controller"
       ],
-      "groupName": "system-upgrade-controller-suite",
+      "additionalBranchPrefix": "",
+      "separateMinorPatch": true
+    },
+    {
+      "groupName": "vector-suite",
+      "matchDatasources": [
+        "docker",
+        "github-releases",
+        "helm"
+      ],
+      "matchPackagePatterns": [
+        "vector"
+      ],
       "additionalBranchPrefix": "",
       "separateMinorPatch": true
     }
