--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,33 +6,33 @@ vars:
     sh: "git rev-parse --show-toplevel"
   CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
   K3S_PRIMARY_MASTER_NODE_USERNAME: "ubuntu"
-  K3S_PRIMARY_MASTER_NODE_ADDR: "10.1.6.101"
-  K3S_LB_ADDR: "192.168.69.5"
+  K3S_PRIMARY_MASTER_NODE_ADDR: "192.168.42.10"
+  K3S_LB_ADDR: "192.168.1.1"
 
 env:
   KUBECONFIG: "{{.CLUSTER_DIR}}/kubeconfig"
 
 includes:
-  blocky: .taskfiles/blocky.yml
-  format: .taskfiles/format.yml
-  lint: .taskfiles/lint.yml
+  formatter: .taskfiles/formatter.yml
+  linter: .taskfiles/linter.yml
 
 tasks:
-  deps:
-    - task: deps:ansible
-    - task: deps:pre-commit
+  update-deps:
+    - task: update-deps:ansible
+    - task: update-deps:pre-commit
 
-  deps:ansible:
+  update-deps:ansible:
     desc: install/upgrade ansible deps
     dir: ansible
     cmds:
       - "ansible-galaxy install -r requirements.yml --roles-path ~/.ansible/roles --force"
       - "ansible-galaxy collection install -r requirements.yml --collections-path ~/.ansible/collections --force"
 
-  deps:pre-commit:
+  update-deps:pre-commit:
     desc: install/upgrade pre-commit deps
     cmds:
-      - pre-commit install-hooks
+      - pre-commit autoupdate
+      - pre-commit install --install-hooks
 
   pre-commit:
     desc: Run pre-commit
