feat: install updates for router

--- a/ansible/router/playbooks/apps.yml
+++ b/ansible/router/playbooks/apps.yml
@@ -9,5 +9,5 @@
       tags: adguardhome
     - role: coredns.router
       tags: coredns
-    - role: vector.router
-      tags: vector
+    # - role: vector.router
+    #   tags: vector
