--- a/ansible/router/playbooks/apps.yml
+++ b/ansible/router/playbooks/apps.yml
@@ -7,7 +7,7 @@
   roles:
     - role: adguardhome.router
       tags: adguardhome
-    - role: coredns.router
-      tags: coredns
-    # - role: vector.router
-    #   tags: vector
+    # - role: coredns.router
+    #   tags: coredns
+    - role: vector.router
+      tags: vector
