--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,7 +13,7 @@
     "github>claughinghouse/home-ops//.github/renovate/semanticCommits"
   ],
   "platform": "github",
-  "username": "rosey-bot[bot]",
+  "username": "midnight-bot-6658[bot]",
   "repositories": ["claughinghouse/home-ops"],
   "onboarding": false,
   "requireConfig": false,
