--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,7 +17,7 @@
   "repositories": ["claughinghouse/home-ops"],
   "onboarding": false,
   "requireConfig": false,
-  "gitAuthor": "midnight-bot-6658 <midnight-bot-6658[bot]@users.noreply.github.com>",
+  "gitAuthor": "midnight-bot-6658 <182125+midnight-bot-6658[bot]@users.noreply.github.com>",
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": [
     "prIgnoreNotification"
